# eMGine

./: .gitignore  Application.cpp  Application.hpp  BufferVector.hpp  CMakeLists.txt  Errors.cpp  Errors.hpp  Hello.cpp  Hello.hpp  Logs.hpp  Main.cpp  Memory.cpp  Memory.hpp  README.md  TODO  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp
BuildLogs/: log.txt
Builds/: .ninja_deps  .ninja_log  build.ninja
Containers/: BitField.hpp  Buffer.hpp  Vector.hpp
Dependencies/GL3W/include/: gl3w.h  glcorearb.h
Dependencies/glm/: glmtypes.hpp
Duperele/: BattleMain.cpp  EntityTest.cpp  NowyParadygmat.cpp  VectorTest.cpp
EntityEngine/: EntityContainer.cpp  EntityContainer.hpp  EntityEngine.cpp  EntityEngine.hpp  EntityFragment.hpp  EntityTable.cpp  EntityTable.hpp  EntityUtilities.hpp  EntityView.cpp  EntityView.hpp
Renderer/: BasicShapes.cpp  BasicShapes.hpp  Camera.hpp  Drawable.cpp  Drawable.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshData.hpp  MeshRenderer.hpp  Renderer.cpp  Renderer.hpp  RendererUtilities.hpp  Review.txt  Shader.cpp  Shader.hpp  TODO  Transform.cpp  Transform.hpp  VertexArray.cpp  VertexArray.hpp
Renderer/utils/: shader_utils.cpp  shader_utils.hpp
Resources/: default_frag.glsl  default_vert.glsl
Utilities/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Time.cpp  Time.hpp  _TODO_Timer.cppTODO
Utilities/Math/: Math.hpp  Matrix22F.hpp  Matrix33F.hpp  Matrix44F.hpp  Vector2F.hpp  Vector3F.hpp  Vector4F.hpp
